FIGMA E-commerce Product List & Page testing with display grid

--- a/TESTS/index.html
+++ b/TESTS/index.html
@@ -20,6 +20,21 @@
                 <ul class="header__menu">
                     <li class="header__menu-tab1">FIGMA</li>
                     <li class="header__menu-tab2">DEMO</li>
+                    <!-- DROPDOWN MENU PANELS -->
+                    <div class="dropdown1_main">
+                        <ul>
+                            <li>E-commerce Components ►</li>
+                            <li>E-commerce Blog ►</li>
+                            <li>E-commerce Pricing ►</li>
+                            <li>E-commerce Products ►</li>
+                            <li>E-commerce Desktop Shop ►</li>
+                        </ul>
+                    </div>
+                    <div class="dropdown1_alt">
+                        <ul>
+                            <li>Selhome</li>
+                        </ul>
+                    </div>
                 </ul>
                 <form class="header__signin" action="#" method="post"></form>
                 <p class="header__signup"></p>
@@ -32,12 +47,12 @@
                         <i class="fa-solid fa-magnifying-glass fa-1x"></i>
                     </button>
                 </form>
-                <form action="#">
+                <form class="navbar__langpanel" action="#">
                     <i class="fa-solid fa-globe fa-1x"></i>
                     <select name="lang" id="lang">
+                        <option value="english">English</option>
                         <option value="azərbaycan-dili">Azərbaycan dili</option>
                         <option value="türkçe">Türkçe</option>
-                        <option value="english">English</option>
                     </select>
                 </form>
                 <button>
