old index html refresh for product shop html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a href="/FIGMA E-commerce/Components/checkbox.html">Components Checkboxes</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/FIGMA E-commerce/ProductPage ProductList/product-page.html">Product Page & Shop</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
