--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="#">EMPTY SLOT</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/Selhome/selhome.html">SELHOME</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
