--- a/Selhome/selhome.html
+++ b/Selhome/selhome.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <!-- Font Awesome Kit Link -->
         <script src="https://kit.fontawesome.com/26c3179b26.js" crossorigin="anonymous"></script>
         <!-- Style Sheets Link -->
@@ -199,12 +200,194 @@
             </div>
             <!-- ----- Search panel ----- -->
             <div class="search">
-                <img class="search__logo" src="./selhome-asset/logo.svg" alt="img-logo">
+                <img class="search__logo" src="./selhome-asset/selhome logo.png" alt="img-logo">
+                <form class="search__searchbar" action="#" method="get">
+                    <input class="search__searchbar--panel" type="search" placeholder="10.000 məhsul üzərində axtarış">
+                    <button class="search__searchbar--button">
+                        <i class="fa-solid fa-magnifying-glass fa-1x"></i>
+                    </button>
+                </form>
+                <form class="search__langbar" action="#">
+                    <select class="search__langbar--selector" name="languages" id="languages">
+                        <option value="azərbaycan-dili">Azərbaycan dili</option>
+                        <option value="türkçe">Türkçe</option>
+                        <option value="english">English</option>
+                        <option value="русский">Русский</option>
+                    </select>
+                    <i class="fa-solid fa-globe fa-1x"></i>
+                </form>
+                <div class="search__userpanel">
+                    <i class="fa-solid fa-cart-shopping fa-2x">
+                        <p class="fa-cart-shopping__count">0</p>
+                    </i>
+                    <div class="dropdown--shopping">
+                        <div class="dropdown--shopping_info">
+                            <b>Toplam</b>
+                            <strong>0,00</strong>
+                        </div>
+                        <a class="dropdown--shopping_cart" href="#">Səbətə baxın</a>
+                        <a class="dropdown--shopping_purchase" href="#">Ödəniş et</a>
+                    </div>
+                    <i class="fa-regular fa-heart fa-2x"></i>
+                    <i class="fa-regular fa-user fa-2x"></i>
+                    <div class="dropdown--user"><a href="$">
+                        Giriş və ya qeydiyyatdan keçin
+                    </a></div>
+                </div>
             </div>
         </nav>
         <!-- ◄---------- MAIN ----------► -->
-        <main></main>
+        <main>
+            <section class="collections">
+                <div class="collections__carousel">
+                    <input class="bag" type="radio" name="carousel" id="bag" checked>
+                    <input class="org" type="radio" name="carousel" id="org">
+                    <input class="ag" type="radio" name="carousel" id="ag">
+                    <div class="collections__carousel--bagkolleksiyasi">
+                        <img src="./selhome-asset/d153cfb0a2e2741318e287f953c62923.jpg" alt="img-bag">
+                        <div>
+                            <strong>Bağ kolleksiyası</strong> <br>
+                            <a href="#"><button id="btn-purchase">İndi alış-veriş et</button></a>
+                        </div>
+                    </div>
+                    <div class="collections__carousel--organikkolleksiyasi">
+                        <img src="./selhome-asset/da8959b7693384e636fb850c7e9a3b13.jpg" alt="img-organik">
+                        <div>
+                            <strong>Organik kolleksiya</strong> <br>
+                            <p>sizi evinizdə təbiətə daha yaxın edəcək</p>
+                            <a href="#"><button id="btn-purchase">İndi alış-veriş et</button></a>
+                        </div>
+                    </div>
+                    <div class="collections__carousel--agrengincazibesi">
+                        <img src="./selhome-asset/154ed2d149c9cc665215d6bc37a9d3cc.jpg" alt="agreng">
+                        <div>
+                            <strong>Ağ rəngin cazibəsi</strong> <br>
+                            <a href="#"><button id="btn-purchase">İndi alış-veriş et</button></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="collections__container">
+                    <div class="collections__container--yataqdesti">
+                        <a href="#">
+                            <div>
+                                <strong>Yataq dəsti</strong> <br>
+                                <button id="btn-purchase">İndi alış-veriş et</button>
+                            </div>
+                            <img src="./selhome-asset/2e09d70873d26ac7c8c09764cc824ef8.jpg" alt="img-yataqdesti">
+                        </a>
+                    </div>
+                    <div class="collections__container--hamak">
+                        <a href="#">
+                            <div>
+                                <strong>Yataq dəsti</strong> <br>
+                                <button id="btn-purchase">İndi alış-veriş et</button>
+                            </div>
+                            <img src="./selhome-asset/6b734e31dace6a4e2aaa00bd90f3da45.jpg" alt="img-yataqdesti">
+                        </a>
+                    </div>
+                    <div class="collections__container--yemekdesti">
+                        <a href="#">
+                            <div>
+                                <strong>Yataq dəsti</strong> <br>
+                                <button id="btn-purchase">İndi alış-veriş et</button>
+                            </div>
+                            <img src="./selhome-asset/032bf94bbe2facdd61f10508e3e1325a.jpg" alt="img-yataqdesti">
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section class="topsells">
+                <div class="topsells__title">
+                    <h1>Ən çox satanlar</h1>
+                    <p>Selhome-da ən çox satılan məhsul</p>
+                </div>
+                <div class="topsells__cardscontainer">
+                    <div class="topsells__cardscontainer--card">
+                        <a href="#">
+                            <img src="./selhome-asset/1fa25f7b92580dcaa4b77b6d1c7f7ce9.jpg" alt="product-sufre">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                            <i class="fa-solid fa-cart-plus fa-1x"></i>
+                            <h3>Süfrələr</h3>
+                            <strong>54,9 AZN - 59,9 AZN</strong>
+                        </a>
+                    </div>
+                    <div class="topsells__cardscontainer--card">
+                        <a href="#">
+                            <img src="./selhome-asset/48798e1fdb15e99ac4d319c6e957144a.jpg" alt="product-sufre">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                            <i class="fa-solid fa-cart-plus fa-1x"></i>
+                            <h3>Kiçik kofe masası</h3>
+                            <strong>99,9 AZN</strong>
+                        </a>
+                    </div>
+                    <div class="topsells__cardscontainer--card">
+                        <a href="#">
+                            <img src="./selhome-asset/bd8a538494dd29a9963eaa4701040a5c.jpg" alt="product-sufre">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                            <i class="fa-solid fa-cart-plus fa-1x"></i>
+                            <h3>Hamam dəsti</h3>
+                            <strong>12,9 AZN - 21,9 AZN</strong>
+                        </a>
+                    </div>
+                    <div class="topsells__cardscontainer--card">
+                        <a href="#">
+                            <img src="./selhome-asset/e64cbba18903bcf01d34b914e2d81624.jpg" alt="product-sufre">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                            <i class="fa-solid fa-cart-plus fa-1x"></i>
+                            <h3>Yorğan üzü</h3>
+                            <strong>74,9 AZN</strong>
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section class="topsells"> <!-- weeksells=topsells -->
+                <div class="topsells__title">
+                    <h1>Həftənin məhsulları</h1>
+                    <p>Həftənin məhsullarının təsviri</p>
+                </div>
+                <div class="topsells__cardscontainer">
+                    <div class="topsells__cardscontainer--card">
+                        <a href="#">
+                            <img src="./selhome-asset/2c054337f7464aaacb1d7169dd2c14c5.jpg" alt="product-yastiquzu">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                            <i class="fa-solid fa-cart-plus fa-1x"></i>
+                            <h3>Yastıq üzü</h3>
+                            <strong>24,9 AZN</strong>
+                        </a>
+                    </div>
+                    <div class="topsells__cardscontainer--card">
+                        <a href="#">
+                            <img src="./selhome-asset/e87693c4c8f5f1c97134cd1a9027f823.jpg" alt="product-print2print">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                            <i class="fa-solid fa-cart-plus fa-1x"></i>
+                            <h3>" Print to print " kolleksiyası</h3>
+                            <strong>12,9 - 34,9 AZN</strong>
+                        </a>
+                    </div>
+                    <div class="topsells__cardscontainer--card">
+                        <a href="#">
+                            <img src="./selhome-asset/1fc5c924e4f55b7a2aa3e67c4087dbe3.jpg" alt="product-sufreler">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                            <i class="fa-solid fa-cart-plus fa-1x"></i>
+                            <h3>Süfrələr</h3>
+                            <strong>64,9 AZN - 89,9 AZN</strong>
+                        </a>
+                    </div>
+                    <div class="topsells__cardscontainer--card">
+                        <a href="#">
+                            <img src="./selhome-asset/14123b7b0042d2b589aad36f45531346.jpg" alt="product-novruz">
+                            <i class="fa-solid fa-heart fa-1x"></i>
+                            <i class="fa-solid fa-cart-plus fa-1x"></i>
+                            <h3>Dekorativ Novruz yumurtaları- 6lı dəst</h3>
+                            <strong>4,9 AZN</strong>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </main>
         <!-- ◄---------- FOOTER ----------► -->
-        <footer></footer>
+        <footer>
+            <div></div>
+        </footer>
     </body>
 </html>
