position fixed not working for Header & Footer, some fixes & Mobile Responsive left - SELHOME

--- a/Selhome/selhome.html
+++ b/Selhome/selhome.html
@@ -386,8 +386,70 @@
             </section>
         </main>
         <!-- ◄---------- FOOTER ----------► -->
-        <footer>
-            <div></div>
+        <footer class="footer">
+            <div class="footer__upside">
+                <ul>
+                    <h2>QISA KEÇIDLƏR</h2>
+                    <li><a href="#">Haqqımızda</a></li>
+                    <li><a href="#">Sual-Cavab</a></li>
+                    <li><a href="#">Kömək</a></li>
+                </ul>
+                <ul>
+                    <h2>KATEQORIYALAR</h2>
+                    <li><a href="#">Milli</a></li>
+                    <li><a href="#">Yeni kolleksiya</a></li>
+                    <li><a href="#">Endirim</a></li>
+                </ul>
+                <ul>
+                    <h2>ƏLAQƏ</h2>
+                    <li>
+                        <i class="fa-solid fa-headset fa-1x"></i>
+                        +994 50 720 39 89
+                    </li>
+                    <li>
+                        <i class="fa-regular fa-envelope fa-1x"></i>
+                        cs@selhome.az
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-house fa-1x"></i>
+                        Səməd Vurğun küç., 37A, Bakı, Azərbaycan
+                    </li>
+                </ul>
+                <ul>
+                    <form action="#" method="post">
+                        <label for="subscribe">ƏLAQƏ SAXLAYIN</label> <br>
+                        <input type="email" placeholder="Email ünvaniniz">
+                        <button>
+                            <i class="fa-solid fa-angles-right fa-1x"></i>
+                        </button>
+                    </form>
+                    <p>Bizi izləyin</p>
+                    <a href="#"><i class="fa-brands fa-instagram fa-1x"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook fa-1x"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest fa-1x"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube fa-1x"></i></a>
+                </ul>
+            </div>
+            <div class="footer__bottom">
+                <div>
+                    <form action="#">
+                        <select name="languages" id="languages">
+                            <option value="azərbaycan-dili">Azərbaycan dili</option>
+                            <option value="türkçe">Türkçe</option>
+                            <option value="english">English</option>
+                            <option value="русский">Русский</option>
+                        </select>
+                        <i class="fa-solid fa-globe fa-1x"></i>
+                    </form>
+                    <i class="fa-brands fa-cc-visa fa-1x"></i>
+                    <i class="fa-brands fa-cc-mastercard fa-1x"></i>
+                </div>
+                <div>
+                    <a href="#">Şərtlər və Qaydalar</a>
+                    <a href="#">Məxfilik</a>
+                    <p>© 2020 Selhome. Bütün hüquqlar qorunur.</p>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
