--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <a href="/Selhome/selhome.html">SELHOME</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/ADY/ady.html">ADY</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
