--- a/ADY/ady.html
+++ b/ADY/ady.html
@@ -19,10 +19,66 @@
         <!-- NAVIGATION SECTIONS StarT -->
         <nav id="nav">
             <section>
-                <div class="abc123"></div>
-            </section>
-            <section>
-                <div></div>
+                <div>
+                    <img src="#" alt="ady-logo">
+                    <button><img src="#" alt="qaynar-xett"></button>
+                    <ul>
+                        <li><a href="#">KORPORATİV</a></li>
+                        <li><a href="#">SƏRNİŞİN DAŞIMALARI</a></li>
+                        <li><a href="#"></a>YÜK DAŞIMALARI</li>
+                    </ul>
+                    <ul>
+                        <li>Tariflər və ödəniş</li>
+                        <ul>
+                            <li><a href="#"></a>Gediş haqqı tarifləri</li>
+                            <li><a href="#"></a>Yerində ödəniş</li>
+                            <li><a href="#"></a>Gediş haqqının qaytarılması</li>
+                            <li><a href="#"></a>Bilet almaq üçün tələb olunan sənədlər</li>
+                            <li><a href="#"></a>Elektron bilet satışına dair qaydalar</li>
+                        </ul>
+                        <li>Qatarlar</li>
+                        <ul>
+                            <li><a href="#"></a>Qatarların növləri</li>
+                            <li><a href="#"></a>Vaqonların növləri</li>
+                            <li><a href="#"></a>Parkın yenilənməsi</li>
+                        </ul>
+                        <li>Stansiyalar</li>
+                        <ul>
+                            <li><a href="#"></a>Abşeron dairəvi dəmir yolu xətti</li>
+                            <li><a href="#"></a>Vağzallar</li>
+                        </ul>
+                        <li>Daşıma qaydaları</li>
+                        <ul>
+                            <li><a href="#"></a>Uşaqlarla səyahət</li>
+                            <li><a href="#"></a>Əl yüklərinin daşınması</li>
+                            <li><a href="#"></a>Heyvanların daşınması</li>
+                        </ul>
+                        <li>Məsuliyyət</li>
+                        <ul>
+                            <li><a href="#"></a>Fiziki məhdudiyyətli insanlar üçün imkanlar</li>
+                            <li><a href="#"></a>Təmizlik və dezinfeksiya</li>
+                            <li><a href="#"></a>İtirilmiş əşyalar</li>
+                            <li><a href="#"></a>Tibbi müayinə</li>
+                            <li><a href="#"></a>Veloparkinq</li>
+                        </ul>
+                        <li>Əlavə xidmətlər</li>
+                        <ul>
+                            <li><a href="#"></a>Saxlama dolabları</li>
+                            <li><a href="#"></a>Sleepbox</li>
+                            <li><a href="#"></a>Avtoparkinq</li>
+                        </ul>
+                        <li>Media</li>
+                        <ul>
+                            <li><a href="#"></a>Xəbərlər</li>
+                            <li><a href="#"></a>ADY ilə səyahət</li>
+                            <li><a href="#"></a>Statistik məlumatlar</li>
+                        </ul>
+                        <li><a href="#"></a>Tez-tez verilən suallar</li>
+                        <li><a href="#"></a>Əlaqə</li>
+                        <li><a href="#"></a>Hərəkət cədvəli</li>
+                        <li><a href="#"></a>Şəxsi kabinet</li>
+                    </ul>
+                </div>
             </section>
         </nav>
         <!-- NAVIGATION SECTIONS enD -->
@@ -32,17 +88,11 @@
             <section>
                 <div></div>
             </section>
-            <section>
-                <div></div>
-            </section>
         </main>
         <!-- MAIN SECTIONS enD -->
         <!-- ================================================== -->
         <!-- FOOTER SECTIONS StarT -->
         <footer id="footer">
-            <section>
-                <div></div>
-            </section>
             <section>
                 <div></div>
             </section>
