--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <a href="/ADY/ady.html">ADY</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/January 9-12, 2023/zyro-ginza.html">Zyro Ginza</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
