--- a/January 9-12, 2023/zyro-ginza.html
+++ b/January 9-12, 2023/zyro-ginza.html
@@ -49,7 +49,7 @@
                     Authentic cuisine, made entirely from scratch.
                 </h1>
                 <div class="nav__social">
-                    <a class="nav__social--links" href="#">
+                    <a class="nav__social--links" href="https://github.com/kanan-git/Homeworks">
                         <i class="fa-brands fa-twitter fa-1x"></i>
                     </a>
                     <a class="nav__social--links" href="#">
@@ -63,7 +63,114 @@
         </nav>
         <!-- ================================================== -->
         <!-- main start -->
-        <main id="main"></main>
+        <main id="main">
+            <section class="sections">
+                <div class="memories">
+                    <img class="memories__image" src="./zyro-ginza-assets/2.png" alt="image-mmif">
+                    <div class="memories__textcontainer">
+                        <h1 class="memories__textcontainer--header">
+                            Memories made in food
+                        </h1>
+                        <p class="memories__textcontainer--description">
+                            Our eclectic menu reflects the wide variety of influences 
+                            and experiences that inform our approach to cooking. We 
+                            don’t just serve dishes, we serve memories.
+                        </p>
+                        <a class="memories__textcontainer--link" href="#">
+                            <button class="memories__textcontainer--button">
+                                Learn more
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section class="sections">
+                <div class="popular">
+                    <h1 class="popular__header">Popular dishes</h1>
+                    <div class="popular__container">
+                        <div class="popular__container--cards">
+                            <img class="popular__container--cards_image" src="./zyro-ginza-assets/3.png" alt="img3">
+                            <div class="popular__container--cards_header">
+                                <h6 class="product-name">Vegetable Pho</h6> <strong class="popular__container--cards_price">$8</strong>
+                            </div>
+                            <p class="popular__container--cards_text">
+                                Ginza Pho is based on a family recipe that's been handed down for generations. 
+                                It's a spicy, light and aromatic noodle soup.
+                            </p>
+                        </div>
+                        <div class="popular__container--cards">
+                            <img class="popular__container--cards_image" src="./zyro-ginza-assets/4.png" alt="img3">
+                            <div class="popular__container--cards_header">
+                                <h6 class="product-name">Tonkatsu Ramen</h6> <strong class="popular__container--cards_price">$7</strong>
+                            </div>
+                            <p class="popular__container--cards_text">
+                                Our bespoke ramen comes with handmade noodles, a wide array of toppings to 
+                                choose from and homemade broth.
+                            </p>
+                        </div>
+                    </div>
+                    <a class="popular__buttonlink" href="#">
+                        <button class="popular__button">
+                            See menu
+                        </button>
+                    </a>
+                </div>
+            </section>
+            <section class="sections">
+                <div class="gallery">
+                    <ul class="gallery__column">
+                        <h1 class="gallery__header">Great food for the whole family</h1>
+                        <p class="gallery__text">Some of the best memories revolve around good food and family 
+                            – that's why we welcome all of your loved ones, including 
+                            children. We have dedicated family seating section towards 
+                            the back of the restaurant.
+                        </p>
+                    </ul>
+                    <ul class="gallery__column">
+                        <img class="gallery__img" src="./zyro-ginza-assets/5.png" alt="img5">
+                    </ul>
+                </div>
+                <div class="gallery">
+                    <ul class="spec-edit">
+                        <img class="gallery__img" src="./zyro-ginza-assets/6.png" alt="img6">
+                    </ul>
+                    <ul class="spec-edit">
+                        <h1 class="gallery__header">We are here to lighten up your evening</h1>
+                        <p class="gallery__text">All of our waiters have worked in our kitchen, 
+                            meaning that they know the menu inside out and can help you, whether 
+                            you need to check for allergens or need a hand for picking the right 
+                            kind of wine.
+                        </p>
+                    </ul>
+                </div>
+                <div class="gallery">
+                    <ul class="spec-edit">
+                        <h1 class="gallery__header">We welcome your animal friends</h1>
+                        <p class="gallery__text">Our restaurant is pet-friendly, meaning 
+                            that you can bring your furry friends with you. We ask for calm 
+                            and collected behavior from all of our animal customers.
+                        </p>
+                    </ul>
+                    <ul class="spec-edit">
+                        <img class="last-img" src="./zyro-ginza-assets/7.png" alt="img7">
+                    </ul>
+                </div>
+            </section>
+            <section class="sections">
+                <div class="booking">
+                    <h1 class="booking__header">Book a table</h1>
+                    <p class="booking__text">
+                        Reserving a table beforehand means less waiting. Groups of 8 
+                        or more must reserve ahead of time.
+                    </p>
+                    <a class="booking__link" href="#">
+                        <button class="booking__button">
+                            Book now
+                        </button>
+                    </a>
+                </div>
+            </section>
+        </main>
         <!-- ================================================== -->
         <!-- footer start -->
         <footer id="footer">
