Zyro Kodah template just started

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="/January 9-12, 2023/zyro-ginza.html">Zyro Ginza</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/Zyro Kodah/zyro-kodah.html">Zyro Kodah</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
