--- a/Zyro Kodah/zyro-kodah.html
+++ b/Zyro Kodah/zyro-kodah.html
@@ -8,7 +8,7 @@
         <!-- google fonts links -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
         <!-- fontawesome kit link -->
         <script src="https://kit.fontawesome.com/26c3179b26.js" crossorigin="anonymous"></script>
         <!-- style sheet link -->
@@ -17,23 +17,106 @@
     <body>
         <!-- ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬ -->
         <nav id="nav">
-            <div class="nav"></div>
+            <div class="nav">
+                <a class="nav--link" href="#">
+                    <img class="nav--logo" src="./zyro-kodah-assets/Kodah-YKb0ZnQNoGHepa6n.svg" alt="logo">
+                </a>
+                <button class="nav--button">
+                    <i class="fa-solid fa-bars fa-1x"></i>
+                </button>
+                <div class="nav--menu">
+                    <a href="nav--link">About</a>
+                    <a href="nav--link">Blog</a>
+                    <a href="nav--link">Contact</a>
+                </div>
+            </div>
         </nav>
         <!-- ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬ -->
         <main id="main">
             <section class="section">
-                <div class="travelling"></div>
+                <div class="travelling">
+                    <ul class="travelling__columns">
+                        <img class="travelling__columns--image" src="./zyro-kodah-assets/jeremy-bishop-unsplash-AQE0OE3RxghDQBq3.avif" alt="photo-01">
+                    </ul>
+                    <ul class="travelling__columns">
+                        <h1 class="travelling__columns--h1">Traveling around the globe</h1>
+                        <h6 class="travelling__columns--h6">& sharing stories</h6>
+                        <p class="travelling__columns--paragraph">
+                            The world is filled with endless beauty and adventures. 
+                            It's my dream to explore every corner of this incredible 
+                            planet. Join me on my journey across roads, seas, and 
+                            skies.
+                        </p>
+                    </ul>
+                </div>
             </section>
             <section class="section">
-                <div class="most-routes"></div>
+                <div class="most-routes">
+                    <h1 class="most-routes__header">My most recent routes</h1>
+                    <div class="most-routes__container">
+                        <div class="most-routes__container--cards">
+                            <img class="most-routes__container--cards_photo" src="./zyro-kodah-assets/dave-herring-unsplash-dWxP7xnq12HzwlEO.png" alt="photo-02">
+                            <h3 class="most-routes__container--cards_title">Iceland</h3>
+                            <p class="most-routes__container--cards_description">Nature at its most raw.</p>
+                            <p class="most-routes__container--cards_date">6/30/2021 <span>1 min read</span></p>
+                        </div>
+                        <div class="most-routes__container--cards">
+                            <img class="most-routes__container--cards_photo" src="./zyro-kodah-assets/jeremy-bishop-unsplash-mv03O0La7NT58BPk.png" alt="photo-03">
+                            <h3 class="most-routes__container--cards_title">Grand Canyon & Utah</h3>
+                            <p class="most-routes__container--cards_description">Rugged mountains and riverbeds.</p>
+                            <p class="most-routes__container--cards_date">6/30/2021 <span>1 min read</span></p>
+                        </div>
+                        <div class="most-routes__container--cards">
+                            <img class="most-routes__container--cards_photo" src="./zyro-kodah-assets/ethan-dow-xssEs_oCv-A-unsplash-mxB3LKjapztpxM0X.avif" alt="photo-04">
+                            <h3 class="most-routes__container--cards_title">Lake Tahoe</h3>
+                            <p class="most-routes__container--cards_description">Freshwater lake adventures.</p>
+                            <p class="most-routes__container--cards_date">6/30/2021 <span>1 min read</span></p>
+                        </div>
+                        <div class="most-routes__container--cards">
+                            <img class="most-routes__container--cards_photo" src="./zyro-kodah-assets/jeremy-bishop-unsplash-YX48v42OjqsgGG3q.png" alt="photo-05">
+                            <h3 class="most-routes__container--cards_title">Group tours</h3>
+                            <p class="most-routes__container--cards_description">Life is more fun when you have people to share it with.</p>
+                            <p class="most-routes__container--cards_date">6/30/2021 <span>1 min read</span></p>
+                        </div>
+                    </div>
+                    <a class="most-routes__links" href="#">
+                        <button class="most-routes__button">
+                            All stories here
+                        </button>
+                    </a>
+                </div>
             </section>
             <section class="section">
-                <div class="gallery"></div>
+                <div class="gallery">
+                    <img src="./zyro-kodah-assets/alex-talmon-unsplash-m6LKnQyGV7ievzDq.jpg" alt="photo-06" class="gallery__images">
+                    <img src="./zyro-kodah-assets/cassidy-dickens-unsplash-Yg2Gn27BWyFaqx9w.jpg" alt="photo-07" class="gallery__images">
+                    <img src="./zyro-kodah-assets/helena-nunes-santana-unsplash-AVLnELPOyXHZ597B.jpg" alt="photo-08" class="gallery__images">
+                    <img src="./zyro-kodah-assets/jeremy-bishop-unsplash-YleE8enXqgcpyVDw.jpg" alt="photo-09" class="gallery__images">
+                </div>
             </section>
         </main>
         <!-- ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬ -->
         <footer id="footer">
-            <div class="footer"></div>
+            <div class="footer">
+                <ul>
+                    <form class="footer__form" method="post">
+                        <label class="footer__form--label" for="email">Subscribe to my newsletter here *</label>
+                        <input class="footer__form--input" type="email" id="email" name="email">
+                        <button class="footer__form--button">Submit</button>
+                    </form>
+                    <div class="footer__social">
+                        <a class="footer__social--link" href="#">
+                            <i class="fa-brands fa-twitter fa-1x"></i>
+                        </a>
+                        <a class="footer__social--link" href="#">
+                            <i class="fa-brands fa-facebook fa-1x"></i>
+                        </a>
+                        <a class="footer__social--link" href="#">
+                            <i class="fa-brands fa-instagram fa-1x"></i>
+                        </a>
+                    </div>
+                </ul>
+            </div>
         </footer>
         <!-- ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬ -->
     </body>
