html is ready, only scss left

--- a/Zyro Kodah/zyro-kodah.html
+++ b/Zyro Kodah/zyro-kodah.html
@@ -98,7 +98,7 @@
         <!-- ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬ -->
         <footer id="footer">
             <div class="footer">
-                <ul>
+                <ul class="footer--column">
                     <form class="footer__form" method="post">
                         <label class="footer__form--label" for="email">Subscribe to my newsletter here *</label>
                         <input class="footer__form--input" type="email" id="email" name="email">
