--- a/Zyro Kodah/zyro-kodah.html
+++ b/Zyro Kodah/zyro-kodah.html
@@ -25,9 +25,9 @@
                     <i class="fa-solid fa-bars fa-1x"></i>
                 </button>
                 <div class="nav--menu">
-                    <a href="nav--link">About</a>
-                    <a href="nav--link">Blog</a>
-                    <a href="nav--link">Contact</a>
+                    <a class="nav--links" href="#">About</a>
+                    <a class="nav--links" href="#">Blog</a>
+                    <a class="nav--links" href="#">Contact</a>
                 </div>
             </div>
         </nav>
@@ -100,8 +100,8 @@
             <div class="footer">
                 <ul class="footer--column">
                     <form class="footer__form" method="post">
-                        <label class="footer__form--label" for="email">Subscribe to my newsletter here *</label>
-                        <input class="footer__form--input" type="email" id="email" name="email">
+                        <label class="footer__form--label" for="email">Subscribe to my newsletter here *</label> <br>
+                        <input class="footer__form--input" type="email" id="email" name="email" placeholder="Your email address"> <br>
                         <button class="footer__form--button">Submit</button>
                     </form>
                     <div class="footer__social">
