--- a/index.html
+++ b/index.html
@@ -11,60 +11,6 @@
         <section>
             <div class="index">
                 <button class="index__button">
-                    <a href="/FIGMA E-commerce/Products/product_01.html">Product 01</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Products/product_02.html">Product 02</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Products/product_03.html">Product 03</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Products/product_04.html">Product 04</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Products/product_05.html">Product 05</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Components/book-appointment.html">E-commerce bookAppoint</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Components/dropdown.html">E-commerce dropdownMenu</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Components/filters.html">E-commerce filters</a>
-                </button>
-                <button class="index__button">
-                    <a href="/PROJECT-copyPaste/sellhome.html">SELHOME DEMO</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Components/accordion.html">Components Accordion</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Components/buttonMd.html">Components Buttons</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Components/buttonStore.html">Components storeButtons</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Components/card_itemStyle-6.html">Components ItemStyle6</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/Components/checkbox.html">Components Checkboxes</a>
-                </button>
-                <button class="index__button">
-                    <a href="/FIGMA E-commerce/ProductPage ProductList/product-page.html">Product Page & Shop</a>
-                </button>
-                <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
-                </button>
-                <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
-                </button>
-                <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
-                </button>
-                <button class="index__button">
                     <a href="/Selhome/selhome.html">SELHOME</a>
                 </button>
                 <button class="index__button">
@@ -77,10 +23,16 @@
                     <a href="/Zyro Kodah/zyro-kodah.html">Zyro Kodah</a>
                 </button>
                 <button class="index__button">
+                    <a href="/Zyro Oakland/zyro-oakland.html">Zyro Oakland</a>
+                </button>
+                <button class="index__button">
+                    <a href="/Zyro Regis/zyro-regis.html">Zyro Regis</a>
+                </button>
+                <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
                 <button class="index__button">
-                    <a href="/TESTS/index.html">NEW INTERFACE (work in progress)</a>
+                    <a href="#">EMPTY SLOT</a>
                 </button>
             </div>
         </section>
