completed Zyro Oakland

--- a/Zyro Oakland/zyro-oakland.html
+++ b/Zyro Oakland/zyro-oakland.html
@@ -11,7 +11,21 @@
         <link rel="stylesheet" href="./zyro-oakland.css">
     </head>
     <body>
-        <nav></nav>
+        <!-- navigation start -->
+        <nav id="nav">
+            <div class="nav">
+                <img class="nav__logo" src="./zyro-oakland-assets/Oakland-logo-A1j4GbkB5OFEvKov.svg" alt="logo">
+                <button class="nav__button">
+                    <i class="fa-solid fa-bars fa-1x"></i>
+                </button>
+                <div class="nav__menus">
+                    <a class="nav__menus--links" href="#">Home</a>
+                    <a class="nav__menus--links" href="#">Projects</a>
+                    <a class="nav__menus--links" href="#">Contact</a>
+                </div>
+            </div>
+        </nav>
+        <!-- main start -->
         <main id="main">
             <div class="main">
                 <div class="main__contact">
@@ -32,13 +46,13 @@
                     </a>
                 </div>
                 <div class="main__details">
-                    <h1 class="main__details--lists">Welding</h1>
-                    <h1 class="main__details--lists">Management</h1>
-                    <h1 class="main__details--lists">Woodwork</h1>
-                    <h1 class="main__details--lists">Metalwork</h1>
-                    <h1 class="main__details--lists">Fabrication</h1>
-                    <h1 class="main__details--lists">Design</h1>
-                    <h1 class="main__details--lists">Construction</h1>
+                    <h2 class="main__details--lists">Welding</h2>
+                    <h2 class="main__details--lists">Management</h2>
+                    <h2 class="main__details--lists">Woodwork</h2>
+                    <h2 class="main__details--lists">Metalwork</h2>
+                    <h2 class="main__details--lists">Fabrication</h2>
+                    <h2 class="main__details--lists">Design</h2>
+                    <h2 class="main__details--lists">Construction</h2>
                 </div>
                 <div class="main__bgaboutus"></div>
                 <div class="main__projects">
@@ -56,14 +70,25 @@
                     <button class="main__projects--button">ALL PROJECTS</button>
                 </div>
                 <div class="main__comment">
-                    <h1 class="main__comment--header">
+                    <h2 class="main__comment--header">
                         “Throughout the project you constantly feel like you 
                         are in safe hands‌.‌”
-                    </h1>
+                    </h2>
                     <p class="main__comment--info">Client of the Danclas project</p>
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <!-- footer start -->
+        <footer id="footer">
+            <div class="footer">
+                <h2 class="footer__title">Got a project to discuss?</h2>
+                <button class="footer__button">CONTACT</button>
+                <div class="footer__social">
+                    <i class="fa-brands fa-facebook fa-1x"></i>
+                    <i class="fa-brands fa-instagram fa-1x"></i>
+                    <i class="fa-brands fa-youtube fa-1x"></i>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
