Zyro Anir template completed in 2h 45 min. | January 17, 2023

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="/Zyro Regis/zyro-regis.html">Zyro Regis</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/Zyro Anir/zyro-anir.html">Zyro Anir</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
