Zyro Marlow completed

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <a href="/Zyro Anir/zyro-anir.html">Zyro Anir</a>
                 </button>
                 <button class="index__button">
+                    <a href="/Zyro Marlow/zyro-marlow.html">Zyro Marlow</a>
+                </button>
+                <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
             </div>
