added exam files

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <a href="/Zyro Marlow/zyro-marlow.html">Zyro Marlow</a>
                 </button>
                 <button class="index__button">
+                    <a href="/EXAM/exam.html">→ EXAM ←</a>
+                </button>
+                <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
             </div>
